src/modules/courses/styles/course.scss
@import '../../core/styles/colors.scss';
@import '../../core/styles/bootstrap/scss/bootstrap';

.route-course {
	.course-section {
		margin: 10px 0;
		width: 100%;
		float: left;
		padding-bottom: 20px;
	}

	.course-subsection {
		padding: 20px !important;

		&.left {
			border-right: 2px $colorGrey solid;
		}

		&.teachers {
			.tag {
				margin-right: 2px;
			}
		}
	}

	table {
		width: 100%;
		border-collapse: separate;
		border-spacing: 0px 2px;

		th {
			text-align: center;
		}

		td {
			padding-top: 10px;
			text-align: center;
			color: grey;
			background-color: whitesmoke;
		}
		.picture {
			border-radius: 50%;
			height: 32px;
			width: 32px;
			margin-right: 10px;
		}
	}
	@include media-breakpoint-down(xs) {
		.container-fluid{
			padding:0;
		}
	}
}

